--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
     "analyze": "vite build --mode analyze",
     "test:seo": "lighthouse http://localhost:4173 --only-categories=performance,seo,best-practices,accessibility --view"
   },
-  "keywords": ["seo", "bootstrap", "vite", "polarhomes", "html", "css", "javascript"],
+  "keywords": [
+    "seo",
+    "bootstrap",
+    "vite",
+    "polarhomes",
+    "html",
+    "css",
+    "javascript"
+  ],
   "author": "",
   "license": "ISC",
   "description": "Fast SEO-optimized bootstrap project",
@@ -35,8 +43,7 @@
     "vite": "^7.1.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html-minifier-terser": "^3.8.0",
-    "vite-plugin-pwa": "^0.20.5",
-    "vite-plugin-critical": "^0.7.3"
+    "vite-plugin-pwa": "^1.0.3"
   },
   "dependencies": {
     "compression": "^1.8.1",
